# AmbedkarGPT-Intern-Task

./: .gitignore  README.md  main.py  pyproject.toml
src/: document_loader.py  embeddings_handler.py  qa_system.py  text_processor.py  vector_store.py
