[project]
name = "RAG-Task"
version = "0.1.0"
description = "Required libraries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.23",
    "langchain>=0.0.27",
    "langchain-chroma>=1.0.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.3.16",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.10",
    "sentence-transformers>=3.2.1",
]
